--- a/src/components/pages/restaurant-page/restaurant-page.css
+++ b/src/components/pages/restaurant-page/restaurant-page.css
@@ -9,7 +9,7 @@
     height: 40px;
 }
 
-.RestaurantPage{
+.restaurant-page {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     width: 50%;
