--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -12,8 +12,9 @@
 }
 
 .size400 {
-    font-size: 8px;
-    padding: 8px 12px;
+    font-size: 13px;
+    padding: 5px 10px;
+    margin: 1px;
 }
 
 .light {
