--- a/src/components/pages/restaurant-page/restaurant-page.module.css
+++ b/src/components/pages/restaurant-page/restaurant-page.module.css
@@ -32,4 +32,19 @@
     grid-template-columns: 60px 60px;
 
 }
-
+.reviewItem, .menuItem {
+    list-style-type: none;
+    color: green
+}
+.emptyReviewHeader{
+    color: burlywood
+}
+.nonEmptyReviewHeader, .menuHeader{
+    color: "ButtonText"
+}
+.reviewText{
+    color: black;
+}
+.restaurantHeader{
+    color: cadetblue
+}
